La til manglende jib cfg