@@ -5,6 +5,11 @@ plugins {
     id("com.google.cloud.tools.jib")
 }
 
+val baseImage: String by project
+val jvmMajorVersion: String by project
+
+val image: String? by project
+
 dependencies {
     implementation(project(":lib:hoplite-config"))
     implementation(project(":lib:kafka-streams"))
@@ -41,4 +46,15 @@ tasks.withType<KotlinCompile>().configureEach {
 
 tasks.withType<Test>().configureEach {
     useJUnitPlatform()
+}
+
+
+jib {
+    from.image = "$baseImage:$jvmMajorVersion"
+    to.image = "${image ?: project.name}:${project.version}"
+    container {
+        environment = mapOf(
+            "IMAGE_WITH_VERSION" to "${image ?: project.name}:${project.version}")
+        jvmFlags = listOf("-XX:ActiveProcessorCount=4", "-XX:+UseZGC", "-XX:+ZGenerational")
+    }
 }
